2014-06-03  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Jun T: 32681: Doc/Zsh/zle.yo: formatting issue.

2014-06-03  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: Src/cond.c: restore cond_match() in case used in
	modules.

2014-06-02  Barton E. Schaefer  <schaefer@zsh.org>

	* 32656 (via Jun T. via waltarix on github): when __APPLE__ is
	defined at compile, normalize Unicode filenames in zreaddir()

2014-06-02  Peter Stephenson  <p.stephenson@samsung.com>

	* Daniel Shahaf: users/18870: Src/glob.c, Test/D02glob.ztst:
	glob scanner needed some coaxing with counting matches with (Y)
	glob qualifier.

2014-06-02  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 32662: Functions/VCS_Info/Backends/VCS_INFO_get_data_git:
	vcs_info git: Fix stagedstr for empty repos

2014-06-01  Barton E. Schaefer  <schaefer@zsh.org>

	* 32653: Completion/Unix/Command/_php: complete files with the
	".phar" extension as well as ".php", and respect the suffixes
	zstyle to change this

	* 32634 (plus doc): Doc/Zsh/options.yo, Doc/Zsh/params.yo,
	Src/init.c, Src/options.c, Src/params.c, Src/zsh.h: add the
	POSIX_ARGZERO option to allow toggling between the original
	value of $0 and the value set by FUNCTION_ARGZERO

	* Daniel Shahaf: users/18857: Doc/Zsh/expn.yo, Src/glob.c,
	Test/D02glob.ztst: add (Y) glob qualifier

2014-06-01  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 32640: Doc/Zsh/cond.yo, Doc/Zsh/expn.yo, NEWS, Src/cond.c,
	Src/glob.c, Test/D02glob.ztst: (#q) with EXTENDED_GLOB forces
	globbing in [[ ... ]].

2014-05-29  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 32624:  Src/builtin.c, Src/jobs.c: use correct scaling factor
	(clock ticks) for times.

	* Keerthan Jai: users/18860: Completion/Unix/Command/_man: man
	-M overrides manpath.

	* unposted: Src/params.c: use DIGBUFSIZE for pipestatus numeric
	buffer.

2014-05-29  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 32619: Functions/VCS_Info/Backends/VCS_INFO_get_data_svn: