@@ -1,3 +1,9 @@
+2014-06-03  Barton E. Schaefer  <schaefer@zsh.org>
+
+	* Daniel Shahaf: 32694: Completion/Zsh/Type/_globquals,
+	Doc/Zsh/expn.yo, Src/glob.c, Test/D02glob.ztst: the number
+	of matches to find is the suffix argument of (Y) qualifier
+
 2014-06-03  Peter Stephenson  <p.w.stephenson@ntlworld.com>
 
 	* Jun T: 32681: Doc/Zsh/zle.yo: formatting issue.
